--- a/drawer/build.xml
+++ b/drawer/build.xml
@@ -27,10 +27,12 @@
 
   <target name="javac" depends="libs" description="Compile java source">
     <mkdir dir="war/WEB-INF/classes"/>
-    <javac srcdir="src" includes="**" encoding="utf-8"
+    <javac encoding="utf-8"
         destdir="war/WEB-INF/classes"
         source="8" target="8" nowarn="true"
         debug="true" debuglevel="lines,vars,source">
+      <src path="src"/>
+      <src path="../api/src"/>
       <classpath refid="project.class.path"/>
     </javac>
     <copy todir="war/WEB-INF/classes">
@@ -43,6 +45,7 @@
     <java failonerror="true" fork="true" classname="com.google.gwt.dev.Compiler">
       <classpath>
         <pathelement location="src"/>
+        <pathelement location="../api/src"/>
         <path refid="project.class.path"/>
       </classpath>
       <!-- add jvmarg -Xss16M or similar if you see a StackOverflowError -->
@@ -58,6 +61,7 @@
     <java failonerror="true" fork="true" classname="com.google.gwt.dev.HostedMode">
       <classpath>
         <pathelement location="src"/>
+        <pathelement location="../api/src"/>
         <path refid="project.class.path"/>
       </classpath>
       <jvmarg value="-Xmx256M"/>
@@ -73,6 +77,7 @@
       <classpath>
         <pathelement location="${gwt.sdk}/gwt-dev-oophm.jar"/>
         <pathelement location="src"/>
+        <pathelement location="../api/src"/>
         <path refid="project.class.path"/>
       </classpath>
       <jvmarg value="-Xmx256M"/>
